# SF6-Afk-Farm-Monitor

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  api_service.py  app.py  config.py  example.toml  incident_manager.py  login.py  main.py  model.py  notifier_client.py  paths.py  pyproject.toml  status_server.py  task.py  utilities.py
.github/workflows/: ci.yml
docs/: ALERT_DEDUPLICATION_PROPOSAL.md  CODEBASE_REVIEW.md  GLANCES_PROPOSAL.md  IMPLEMENTATION_LOG.md  LOGIN_CAPTURE_PROPOSAL.md  PR_REVIEW_PUSHBACK.md  PUSHOVER_RETRY_POLICY_PROPOSAL.md  STATUS_PAGE_PROPOSAL.md  STATUS_PAGE_UX_PROPOSAL.md  pr1_review.md
tests/: conftest.py  test_api_service.py  test_config.py  test_incident_manager.py  test_login.py  test_notifier_client.py  test_status_server.py  test_task.py
