[project]
name = "sf6-afk-farm-monitor"
version = "1.0.0"
description = "Monitor Street Fighter 6 Buckler battle counts and send Pushover alerts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "humanize>=4.15.0",
    "pydantic>=2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.53.0",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "types-requests>=2.32",
]

#[project.scripts]
#test = "scripts.test:main"
