[project]
name = "sf6-afk-farm-monitor"
version = "1.0.0"
description = "Monitor Street Fighter 6 Buckler battle counts and send Pushover alerts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "humanize>=4.15.0",
    "pydantic>=2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.53.0",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "types-requests>=2.32",
]
# `login.py` opens an embedded browser via pywebview to capture the Buckler
# cookies; the monitor itself never needs it. Opt in with `uv sync --group login`
# (login.py prints an install hint when it is missing). A dependency-group rather
# than a project extra, to match how `dev` is declared in this uv-managed project.
login = ["pywebview>=5"]

#[project.scripts]
#test = "scripts.test:main"
